--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/layouts/layout1.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/layouts/layout1.html
@@ -22,11 +22,15 @@
 
     <div th:replace="fragments/header::header"></div>
 
-    <div layout:fragment="content" class="content">
+    <div class="content">
+        <th:block layout:fragment="content">
 
+        </th:block>
     </div>
 
     <div th:replace="fragments/footer::footer"></div>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <th:block layout:fragment="script"></th:block>
 </body>
 </html>
