--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/footer.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <div class="footer" th:fragment="footer">
-        <footer class="page-footer font-small cyan darken-3">
-            <div class="footer-copyright text-center py-3">
-                2020 Shopping Mall Example WebSite
-            </div>
-        </footer>
-    </div>
+
+<th:block th:fragment="footer">
+    <footer class="page-footer footer font-small cyan darken-3">
+        <div class="footer-copyright text-center py-3">
+            2022 Shopping Mall WebSite
+        </div>
+    </footer>
+</th:block>
+
 </html>
