--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/thymeleafEx/thymeleafEx08.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/thymeleafEx/thymeleafEx08.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
-      layout:decorate="~{layouts/layout1}">
+      layout:decorate="~{layouts/shoplayout}">
 
 <div layout:fragment="content" class="text-center mt-3">
     본문 영역 입니다.
