--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/header.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/header.html
@@ -2,42 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<div th:fragment="header">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="/">Shop</a>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item" >
-                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/admin/item/new">상품 등록</a>
-                </li>
-                <li class="nav-item" >
-                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/admin/items">상품 관리</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" href="/cart">장바구니</a>
-                </li>
-                <li class="nav-item" >
-                    <a class="nav-link" sec:authorize="isAuthenticated()" href="/orders">구매이력</a>
-                </li>
-                <li class="nav-item" >
-                    <a class="nav-link" sec:authorize="isAnonymous()" href="/members/login">로그인</a>
-                </li>
-                <li class="nav-item" >
-                    <a class="nav-link" sec:authorize="isAuthenticated()" href="/members/logout">로그아웃</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0" th:action="@{/}" method="get">
-                <input name="searchQuery" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+<th:block th:fragment="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/">LionShop</a>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item" >
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/admin/item/new">상품 등록</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/admin/items/manage">상품 관리</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/cart">장바구니</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/orders">구매이력</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" sec:authorize="isAnonymous()" href="/members/login">로그인</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/members/logout">로그아웃</a>
+                    </li>
+                </ul>
+                <form class="d-flex" action="/">
+                    <input name="searchQuery" class="form-control me-2" type="search" placeholder="상품명/키워드" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
     </nav>
-</div>
+</th:block>
 
 </html>
