--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/member/memberLoginForm.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/member/memberLoginForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}">
+      layout:decorate="~{layouts/shoplayout}">
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
