peer/윤영진: Chapter 7 실습 코드 수행

--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/adminitem/registeritemform.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/adminitem/registeritemform.html
@@ -14,7 +14,7 @@
 
 <div layout:fragment="content" class="container center_div w-50 mt-3 mb-2">
 
-    <form role="form" method="post" action="/admin/items/new" enctype="multipart/form-data" th:object="${itemFormDto}">
+    <form role="form" method="post" enctype="multipart/form-data" th:object="${itemFormDto}">
 
         <p class="h2">
             상품 등록
