--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/itemdtl/itemdtl.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/itemdtl/itemdtl.html
@@ -146,7 +146,7 @@
                 error : function(jqXHR, status, error){
                     if(jqXHR.status == '401'){
                         alert('로그인 후 이용해주세요');
-                        location.href='/login';
+                        location.href='/member/login';
                     } else{
                         alert(jqXHR.responseText);
                     }
