--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/header.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" sec:authorize="isAuthenticated()" href="/cart">장바구니</a>
                     </li>
                     <li class="nav-item" >
-                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/orders">구매이력</a>
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/orderhist">구매이력</a>
                     </li>
                     <li class="nav-item" >
                         <a class="nav-link" sec:authorize="isAnonymous()" href="/members/login">로그인</a>
