peer/윤영진: Chapter 8 실습 코드 수행

--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/itemdtl/itemdtl.html
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/templates/itemdtl/itemdtl.html
@@ -157,7 +157,7 @@
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
-            var url = "/cart";
+            var url = "/itemdtl/cart";
             var paramData = {
                 itemId : $("#itemId").val(),
                 count : $("#count").val()
